<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_bulk"/>

        <EditText
            android:id="@+id/et_bulk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/not_null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_bulk_remark"/>

        <EditText
            android:id="@+id/et_bulk_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/can_null"/>

        <TextView
            android:id="@+id/bulk_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ee000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>